--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -80,7 +80,7 @@
         </div>
         <div class='streamContainer'>
           <button type="button" class="btn btn-secondary">Record</button>
-          <button type="button" class="btn btn-secondary">Start</button>
+          <button type="button" class="btn btn-secondary" onclick="onStart()">Start</button>
           <button type="button" class="btn btn-secondary">Stop</button>
         </div>
       </div>
