--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -27,6 +27,20 @@
   <link rel="stylesheet" href="../styles/quickCollectStyles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/danchitnis/webgl-plot@master/dist/webglplot.umd.js"></script>
+  <script src="https://d3js.org/d3-array.v2.min.js"></script>
+<script src="https://d3js.org/d3-color.v2.min.js"></script>
+<script src="https://d3js.org/d3-format.v2.min.js"></script>
+<script src="https://d3js.org/d3-interpolate.v2.min.js"></script>
+<script src="https://d3js.org/d3-time.v2.min.js"></script>
+<script src="https://d3js.org/d3-time-format.v3.min.js"></script>
+<script src="https://d3js.org/d3-scale.v3.min.js"></script>
+<script src="https://d3js.org/d3-selection.v2.min.js"></script>
+<script src="https://d3js.org/d3-axis.v2.min.js"></script>
+<script src="https://huww98.github.io/TimeChart/dist/timechart.min.js"></script>
+<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 
   <script type="text/javascript">
     $(function () {
@@ -79,7 +93,7 @@
   <div class='window'>
     <div class="container">
       <!--The chart-->
-      <div class="sectionLarge">
+      <div class="sectionLarge" id="chart">
         <div id='chart'></div>
       </div>
       <div class="sectionLarge">
@@ -162,8 +176,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
-
-
   <body>
 
 </html>
