--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -1,181 +1,227 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
   <!-- Insert this line above script imports  -->
-  <script>if (typeof module === 'object') { window.module = module; module = undefined; } 
+  <script>
+    if (typeof module === "object") {
+      window.module = module;
+      module = undefined;
+    }
   </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+  <!-- Bootstrap CSS -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"
+  ></script>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+    crossorigin="anonymous"
+  />
 
-  <!-- Insert this line after script imports  -->
-  <script>if (window.module) module = window.module;</script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="../styles/quickCollectStyles.css">
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="../styles/quickCollectStyles.css"
+  />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/danchitnis/webgl-plot@master/dist/webglplot.umd.js"></script>
-  <script src="https://d3js.org/d3-array.v2.min.js"></script>
-<script src="https://d3js.org/d3-color.v2.min.js"></script>
-<script src="https://d3js.org/d3-format.v2.min.js"></script>
-<script src="https://d3js.org/d3-interpolate.v2.min.js"></script>
-<script src="https://d3js.org/d3-time.v2.min.js"></script>
-<script src="https://d3js.org/d3-time-format.v3.min.js"></script>
-<script src="https://d3js.org/d3-scale.v3.min.js"></script>
-<script src="https://d3js.org/d3-selection.v2.min.js"></script>
-<script src="https://d3js.org/d3-axis.v2.min.js"></script>
-<script src="https://huww98.github.io/TimeChart/dist/timechart.min.js"></script>
-<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-
-
+  <script src="../javascript/features.js"></script>
+  <script src="../javascript/toast.js"></script>
   <script type="text/javascript">
+    /*
+          Run this function on load
+        */
     $(function () {
-      //Add in components
+      /*
+            Add in components
+          */
       $("#navigation").load("../components/navbar.html");
       $("#chart").load("../components/livePlot.html");
       $("#chart2").load("../components/featurePlot.html");
-      //Initialize dropdowns
-      //Files
-      //getDataFiles();
-      setTimeout(()=>{
-        fetch('http://127.0.0.1:5000/datafiles')
-        .then(response => response.json())
-        .then(data_files => {
-          console.log(data_files)
-          for (i = 0; i < data_files.length; i++) {
-          const split = data_files[i].split("/");
-          file_name = split[split.length - 1];
-          $("#file-select").append(
+
+      /*
+            Populate Dropdowns/Fetch Data
+          */
+
+      setTimeout(() => {
+        //CSV Files
+        fetch("http://127.0.0.1:5000/datafiles")
+          .then((response) => response.json())
+          .then((data_files) => {
+            console.log(data_files);
+            for (i = 0; i < data_files.length; i++) {
+              const split = data_files[i].split("/");
+              file_name = split[split.length - 1];
+              $("#file-select").append(
+                $("<option>", {
+                  value: data_files[i],
+                  text: file_name,
+                })
+              );
+            }
+          });
+        //Features
+        console.log(features);
+        features.forEach((feature, index) => {
+          $("#feature-select").append(
             $("<option>", {
-              value: data_files[i],
-              text: file_name,
+              value: feature.function,
+              text: feature.name,
             })
           );
-        }
         });
-      }, 1000)
-
-
+      }, 1000);
     });
 
     function onFileSelect() {
-    //set radio to file and enable the file selector
-    $("#file-select").attr("disabled", false);
-    $("#input-type-live").attr("checked", false);
-  }
+      //set radio to file and enable the file selector
+      $("#file-select").attr("disabled", false);
+      $("#input-type-live").attr("checked", false);
+    }
 
-  function onLiveSelect() {
-    //set radio to live and disable the file selector
-    $("#file-select").attr("disabled", true);
-    $("#input-type-file").attr("checked", false);
-  }
+    function onLiveSelect() {
+      //set radio to live and disable the file selector
+      $("#file-select").attr("disabled", true);
+      $("#input-type-file").attr("checked", false);
+    }
   </script>
-
 </head>
-
 
 <body>
   <div id="navigation"></div>
-  <div class='window'>
+  <div class="window">
     <div class="container">
       <!--The chart-->
-      <div class="sectionLarge" id="chart">
-        <div id='chart'></div>
-      </div>
-      <div class="sectionLarge">
-        <div class='featureContainer'>
-          <div>Feature</div>
-          <div>
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Feature
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-              </ul>
+      <div class="row">
+        <div class="col" id="chart">
+          <div id="chart"></div>
+        </div>
+        <div class="col">
+          <div class="featureContainer">
+            <div>Feature</div>
+            <div>
+              <select
+                id="feature-select"
+                class="form-select"
+                aria-label="Default select example"
+              >
+                <option>None</option>
+              </select>
+            </div>
+            <div>Time Step</div>
+            <div>
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
             </div>
           </div>
-          <div>Time Step</div>
-          <div> <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"></div>
-        </div>
-        <div id='chart2'></div>
-      </div>
-      <div class="section">
-        <div>
-          <h4>Stream</h4>
-        </div>
-        <div class='streamContainer'>
-          <button type="button" class="btn btn-secondary">Record</button>
-          <button type="button" class="btn btn-secondary" onclick="onStart()">Start</button>
-          <button type="button" class="btn btn-secondary" id='stopBtn'>Stop</button>
+          <div id="chart2"></div>
         </div>
       </div>
-      <div class="section">
-        <div>
-          <h4>Input Type</h4>
-        </div>
-        <div class='inputTypeContainer'>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="input-type-live" checked
-              onclick="onLiveSelect()">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Live
-            </label>
+      <div class="row">
+        <div class="col">
+          <div>
+            <h4>Stream</h4>
           </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="input-type-file"
-              onclick="onFileSelect()">
-            <label class="form-check-label" for="flexRadioDefault1">
-              File
-            </label>
+          <div class="streamContainer">
+            <button type="button" class="btn btn-secondary">Record</button>
+            <button type="button" class="btn btn-secondary" onclick="onStart()">
+              Start
+            </button>
+            <button type="button" class="btn btn-secondary" id="stopBtn">
+              Stop
+            </button>
           </div>
+        </div>
+        <div class="col">
+          <div>
+            <h4>Input Type</h4>
+          </div>
+          <div class="inputTypeContainer">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="flexRadioDefault"
+                id="input-type-live"
+                checked
+                onclick="onLiveSelect()"
+              />
+              <label class="form-check-label" for="flexRadioDefault2">
+                Live
+              </label>
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="flexRadioDefault"
+                id="input-type-file"
+                onclick="onFileSelect()"
+              />
+              <label class="form-check-label" for="flexRadioDefault1">
+                File
+              </label>
+            </div>
 
-          <select id='file-select' class="form-select" aria-label="Default select example" disabled>
-            <option selected>File</option>
-          </select>
-
+            <select
+              id="file-select"
+              class="form-select"
+              aria-label="Default select example"
+              disabled
+            >
+              <option selected>File</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div>
+              <h4>Channels</h4>
+            </div>
+            <div class="streamContainer">
+              <button type="button" class="btn btn-secondary">1</button>
+              <button type="button" class="btn btn-secondary">2</button>
+              <button type="button" class="btn btn-secondary">3</button>
+              <button type="button" class="btn btn-secondary">4</button>
+              <button type="button" class="btn btn-secondary">5</button>
+              <button type="button" class="btn btn-secondary">6</button>
+              <button type="button" class="btn btn-secondary">7</button>
+              <button type="button" class="btn btn-secondary">8</button>
+              <button type="button" class="btn btn-secondary">All</button>
+            </div>
+          </div>
+          <div class="col"></div>
         </div>
       </div>
-      <div class="section">
-        <div>
-          <h4>Channels</h4>
-        </div>
-        <div class='streamContainer'>
-          <button type="button" class="btn btn-secondary">1</button>
-          <button type="button" class="btn btn-secondary">2</button>
-          <button type="button" class="btn btn-secondary">3</button>
-          <button type="button" class="btn btn-secondary">4</button>
-          <button type="button" class="btn btn-secondary">5</button>
-          <button type="button" class="btn btn-secondary">6</button>
-          <button type="button" class="btn btn-secondary">7</button>
-          <button type="button" class="btn btn-secondary">8</button>
-          <button type="button" class="btn btn-secondary">All</button>
-        </div>
-      </div>
-      <div class="section"></div>
     </div>
   </div>
 
+  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div class="toast-body" id="toast-text">
+      Hello, world! This is a toast message.
+    </div>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-  <body>
-
-</html>
+    crossorigin="anonymous"
+  ></script>
+  <body></body>
+</body>
