--- a/frontend/pages/patternrecognition.html
+++ b/frontend/pages/patternrecognition.html
@@ -23,11 +23,31 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="../styles/common.css"
+  />
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="../styles/patternRecognition.css"
+  />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
   <script type="text/javascript">
     $(function () {
-      console.log('run navbar')
-      $("#navigation").load("../components/navbar.html");
+       /*
+            Add in components
+          */
+      $("#navigation").load("../components/common/navbar.html");
+      $("#chart").load("../components/patternRecognition/livePlot.html");
+      $("#channels").load("../components/common/channelSelector.html");
+      $('#inputTypeContainer').load("../components/common/inputTypeSelector.html")
+      $('#actionContainer').load("../components/patternRecognition/actionSelector.html")
+      $('#collectionSettings').load("../components/patternRecognition/collectionSettings.html")
+      $('#promptView').load("../components/patternRecognition/promptView.html")
     });
   </script>
 </head>
@@ -37,24 +57,63 @@
   <div id="navigation"></div>
   <div class="container">
     <div class="row">
-      <div class="col">
-        1 of 2
+      <div class="col" id="chart">
+        <div id="chart"></div>
       </div>
       <div class="col">
-        2 of 2
+        <div id='actionContainer'></div>
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        1 of 3
+      <div class="col-6">
+        <div>
+          <h4>Stream</h4>
+        </div>
+        <div class='streamContainer'>
+    
+          <button type="button" class="btn btn-secondary">Record</button>
+          <button type="button" class="btn btn-secondary" onclick="onStart()">
+            Start
+          </button>
+          <button type="button" class="btn btn-secondary" id="stopBtn">
+            Stop
+          </button>
+        </div>
       </div>
-      <div class="col">
-        2 of 3
+      <div class="col-3">
+        <div id ='collectionSettings'></div>
       </div>
-      <div class="col">
-        3 of 3
+      <div class="col-3">
+        <div>
+        <h4>Prompt View</h4>
+      </div>
+        <div id=promptView>
+        
+        </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-6" >
+
+        <div>
+          <h4>Channels</h4>
+        </div>
+        <div class="streamContainer" id="channels"></div>
+      </div>
+      <div class="col-3">
+
+      </div>
+      <div class="col-3">
+        <div>
+          <h4>Input Type</h4>
+        </div>
+        <div class="inputTypeContainer">
+       <div id="inputTypeContainer"></div>
+        </div>
+
+          </div>
+      </div>
+      </div>
   </div>
 
 
