--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -14,12 +14,19 @@
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"
   ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"
+  ></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
     crossorigin="anonymous"
   />
+
+  <link rel="stylesheet" type="text/css" href="../styles/common.css" />
 
   <link
     rel="stylesheet"
@@ -30,7 +37,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <script src="../javascript/features.js"></script>
   <script src="../javascript/toast.js"></script>
-  <script src="../javascript/quickcollect.js"></script>
+
   <script type="text/javascript">
     /*
           Run this function on load
@@ -39,54 +46,17 @@
       /*
             Add in components
           */
-      $("#navigation").load("../components/navbar.html");
-      $("#chart").load("../components/livePlot.html");
-      $("#chart2").load("../components/featurePlot.html");
-
-      /*
-            Populate Dropdowns/Fetch Data
-          */
-
-      setTimeout(() => {
-        //CSV Files
-        fetch("http://127.0.0.1:5000/datafiles")
-          .then((response) => response.json())
-          .then((data_files) => {
-            console.log(data_files);
-            for (i = 0; i < data_files.length; i++) {
-              const split = data_files[i].split("/");
-              file_name = split[split.length - 1];
-              $("#file-select").append(
-                $("<option>", {
-                  value: data_files[i],
-                  text: file_name,
-                })
-              );
-            }
-          });
-        //Features
-        features.forEach((feature, index) => {
-          $("#feature-select").append(
-            $("<option>", {
-              value: feature.function,
-              text: feature.name,
-            })
-          );
-        });
-      }, 1000);
+      $("#navigation").load("../components/common/navbar.html");
+      $("#chart").load("../components/quickCollect/livePlot.html");
+      $("#chart2").load("../components/quickCollect/featurePlot.html");
+      $("#channelSelector").load("../components/common/channelSelector.html");
+      $("#inputTypeContainer").load(
+        "../components/common/inputTypeSelector.html"
+      );
+      $("#featureSelector").load(
+        "../components/quickCollect/featureSelector.html"
+      );
     });
-
-    function onFileSelect() {
-      //set radio to file and enable the file selector
-      $("#file-select").attr("disabled", false);
-      $("#input-type-live").attr("checked", false);
-    }
-
-    function onLiveSelect() {
-      //set radio to live and disable the file selector
-      $("#file-select").attr("disabled", true);
-      $("#input-type-file").attr("checked", false);
-    }
   </script>
 </head>
 
@@ -100,84 +70,35 @@
           <div id="chart"></div>
         </div>
         <div class="col">
-          <div class="featureContainer">
-            <div>Feature</div>
-            <div>
-              <select
-                id="feature-select"
-                class="form-select"
-                aria-label="Default select example"
-              >
-                <option>None</option>
-              </select>
-            </div>
-            <div>Time Step</div>
-            <div>
-              <input
-                type="number"
-                class="form-control"
-                id="time-step"
-                aria-describedby="timeStepIn"
-              />
-            </div>
-          </div>
+          <div class="featureContainer" id="featureSelector"></div>
           <div id="chart2"></div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div>
-            <h4>Stream</h4>
-          </div>
-          <div class="streamContainer">
-            <button type="button" class="btn btn-secondary">Record</button>
-            <button type="button" class="btn btn-secondary" onclick="onStart()">
-              Start
-            </button>
-            <button type="button" class="btn btn-secondary" id="stopBtn">
-              Stop
-            </button>
-          </div>
-        </div>
-        <div class="col">
-          <div>
-            <h4>Input Type</h4>
-          </div>
-          <div class="inputTypeContainer">
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="flexRadioDefault"
-                id="input-type-live"
-                checked
-                onclick="onLiveSelect()"
-              />
-              <label class="form-check-label" for="flexRadioDefault2">
-                Live
-              </label>
+        <div class="row">
+          <div class="col">
+            <div>
+              <h4>Stream</h4>
             </div>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="flexRadioDefault"
-                id="input-type-file"
-                onclick="onFileSelect()"
-              />
-              <label class="form-check-label" for="flexRadioDefault1">
-                File
-              </label>
+            <div class="streamContainer">
+              <button type="button" class="btn btn-secondary">Record</button>
+              <button
+                type="button"
+                class="btn btn-secondary"
+                onclick="onStart()"
+              >
+                Start
+              </button>
+              <button type="button" class="btn btn-secondary" id="stopBtn">
+                Stop
+              </button>
             </div>
-
-            <select
-              id="file-select"
-              class="form-select"
-              aria-label="Default select example"
-              disabled
-            >
-              <option selected>File</option>
-            </select>
+          </div>
+          <div class="col">
+            <div>
+              <h4>Input Type</h4>
+            </div>
+            <div class="inputTypeContainer">
+              <div id="inputTypeContainer"></div>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -185,89 +106,7 @@
             <div>
               <h4>Channels</h4>
             </div>
-            <div class="streamContainer">
-              <button
-                type="button"
-                class="btn btn-primary"
-                id="qc-channel-1"
-                onclick="onChannelToggle(1)"
-                active="true"
-              >
-                1
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-2"
-                onclick="onChannelToggle(2)"
-                active="false"
-              >
-                2
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-3"
-                onclick="onChannelToggle(3)"
-                active="false"
-              >
-                3
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-4"
-                onclick="onChannelToggle(4)"
-                active="false"
-              >
-                4
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-5"
-                onclick="onChannelToggle(5)"
-                active="false"
-              >
-                5
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-6"
-                onclick="onChannelToggle(6)"
-                active="false"
-              >
-                6
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-7"
-                onclick="onChannelToggle(7)"
-                active="false"
-              >
-                7
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-8"
-                onclick="onChannelToggle(8)"
-                active="false"
-              >
-                8
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="qc-channel-all"
-                onclick="onChannelToggle('all')"
-                active="false"
-              >
-                All
-              </button>
-            </div>
+            <div class="streamContainer" id="channelSelector"></div>
           </div>
           <div class="col"></div>
         </div>
