--- a/frontend/pages/actionPrompt.html
+++ b/frontend/pages/actionPrompt.html
@@ -37,6 +37,28 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <script src="../javascript/features.js"></script>
   <script src="../javascript/toast.js"></script>
+  <script type="text/javascript">
+    const { ipcRenderer } = require("electron");
+    const ipc = require("electron").ipcRenderer;
+
+    ipc.on("message", (event, message) => {
+      if (message.text) setPromptText(message.text);
+      if (message.progress)
+        setProgressBar(message.progress.progress, message.progress.text);
+      if (message.image) setPromptImage(message.image);
+    });
+
+    function setProgressBar(percent, text) {
+      $("#action-progress").html(`${text}`);
+      $("#action-progress").css("width", `${percent}%`);
+    }
+    function setPromptImage(imagePath) {
+      $("#prompt-image").attr("src", `../images/actions/${imagePath}`);
+    }
+    function setPromptText(text) {
+      $("#prompt-text").html(text);
+    }
+  </script>
 </head>
 
 <body>
@@ -48,7 +70,11 @@
       flex-direction: column;
     "
   >
-    <img src="../images/actions/key_grip.jpg" style="max-height: 75vh" />
+    <img
+      src="../images/actions/key_grip.jpg"
+      id="prompt-image"
+      style="max-height: 75vh"
+    />
     <div
       style="
         padding: 10px;
@@ -58,7 +84,7 @@
         width: 100%;
       "
     >
-      <div>Recording...</div>
+      <div id="prompt-text">Recording...</div>
       <div class="progress" style="width: 100%">
         <div
           class="progress-bar"
@@ -67,14 +93,12 @@
           aria-valuenow="50"
           aria-valuemin="0"
           aria-valuemax="100"
+          id="action-progress"
         >
           50%
         </div>
       </div>
       <div>Testing</div>
-      <button type="button" class="btn btn-primary" style="margin-top: 10px">
-        Preview
-      </button>
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
