--- a/frontend/pages/patternRecognition/patternRecognition.html
+++ b/frontend/pages/patternRecognition/patternRecognition.html
@@ -37,7 +37,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
   <script type="text/javascript">
-    var appdata=[[]];
+    var appdata={trials:[]};
     var collectionConfig={
       duration:5,
       delay:5,
