--- a/frontend/pages/actionPrompt.html
+++ b/frontend/pages/actionPrompt.html
@@ -36,7 +36,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <script src="../javascript/features.js"></script>
-  <script src="../javascript/toast.js"></script>
+
   <script type="text/javascript">
     const { ipcRenderer } = require("electron");
     const ipc = require("electron").ipcRenderer;
@@ -49,7 +49,8 @@
     });
 
     function setProgressBar(percent, text) {
-      $("#action-progress").html(`${text}`);
+      console.log(percent);
+      $("#action-progress").html(`${Math.ceil(percent / 10) * 10}%`);
       $("#action-progress").css("width", `${percent}%`);
     }
     function setPromptImage(imagePath) {
@@ -60,6 +61,13 @@
     }
   </script>
 </head>
+
+<style>
+  .progress-bar {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+</style>
 
 <body>
   <div
