--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -36,7 +36,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
   <script src="../javascript/features.js"></script>
-  <script src="../javascript/toast.js"></script>
 
   <script type="text/javascript">
     /*
@@ -50,6 +49,7 @@
       $("#chart").load("../components/quickCollect/livePlot.html");
       $("#chart2").load("../components/quickCollect/featurePlot.html");
       $("#channelSelector").load("../components/common/channelSelector.html");
+      $("#toast").load("../components/common/toast.html");
       $("#inputTypeContainer").load(
         "../components/common/inputTypeSelector.html"
       );
@@ -113,20 +113,7 @@
       </div>
     </div>
   </div>
-
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="toast"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="toast-body" id="toast-text">
-      Hello, world! This is a toast message.
-    </div>
-  </div>
+  <div id="toast"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script
