--- a/frontend/pages/quickcollect.html
+++ b/frontend/pages/quickcollect.html
@@ -66,7 +66,7 @@
     <div class="container">
       <!--The chart-->
       <div class="row">
-        <div class="col" id="chart">
+        <div class="col" id="chart" style="overflow-y: scroll;max-height: 50vh; overflow-x: auto;">
           <div id="chart"></div>
         </div>
         <div class="col">
