quick collect record

--- a/frontend/pages/dataCollection.html
+++ b/frontend/pages/dataCollection.html
@@ -24,7 +24,7 @@
   
 <div>
 <div class="row">
-    <div class="col" id="chart" style="overflow-y: scroll;max-height: 50vh; overflow-x: auto;">
+    <div class="col" id="chart">
       <div id="chart"></div>
     </div>
     <div class="col">
